<resources>
    <string name="app_name">Beautician</string>
    <string name="btn1"> Create a beautician account</string>
    <string name="btn2"> Add customer Service</string>
    <string name="btn3">Add products</string>
    <string name="btn4">Join now</string>
    <string name="btn5">Beautician  Terms and conditions</string>
    <string name="btn6">I ACCEPT</string>
    <string name="btn7">Cansel</string>
    <string name="btn8">Next</string>
    <string name="btn9">Pick categories you want to do</string>
    <string name="btn10">Hair cutting</string>
    <string name="btn11">Threading</string>
    <string name="btn12">Facials</string>
    <string name="btn13">Hair treatments</string>
    <string name="btn14">Hair color</string>
    <string name="btn16">NIC number</string>
    <string name="btn17">Title</string>
    <string name="btn18">Select</string>
    <string name="btn19">First Name</string>
    <string name="btn20">Last Name</string>
    <string name="btn21">Birthday</string>
    <string name="btn22">08/16/2020</string>
    <string name="btn23">Next</string>
    <string name="btn24">Street name</string>
    <string name="btn25">City name</string>
    <string name="btn26">Mobile number</string>
    <string name="btn27">Email</string>
    <string name="btn28">SUBMIT</string>
    <string name="btn29">BACK</string>
    <string name="btn30">Username</string>
    <string name="btn31">Password</string>
    <string name="btn32">Renter password</string>
    <string name="btn33">Sign In</string>
    <string name="btn34">Your account is sucessfully created!!!</string>
    <string name="btn35">9am   Name:-Kanchi  eyebrows 15min Rs300.00</string>
    <string name="btn36">Total Rs2400.00  1h15min</string>
    <string name="btn37">12am  Name:- Ravindu  Beard trim  Rs300.00</string>
    <string name="btn38">Total Rs300.00  15min</string>
    <string name="btn39">1pm Name:-Jayanga eyebrows 15min Rs.200.00</string>
    <string name="btn40">Total  Rs3200.00  3h 15min</string>
    <string name="btn41">Appoint</string>
    <string name="btn42">Explore</string>
    <string name="btn43">Add</string>
    <string name="btn44">Income</string>
    <string name="btn45">Profile</string>
    <string name="btn46">Lessa Fernando</string>
    <string name="btn47">Lives in Malabe</string>
    <string name="btn48">From kandy</string>
    <string name="btn49">No Of Services</string>
    <string name="btn50">65</string>
    <string name="btn51">Edit profile</string>
    <string name="btn52">Qualifications</string>
    <string name="btn53">Appoint</string>
    <string name="btn54">Explore</string>
    <string name="btn55">Add</string>
    <string name="btn56">Income</string>
    <string name="btn57">Profile</string>
    <string name="btn58">New appointment</string>
    <string name="btn59">New time reservation</string>
    <string name="btn60">Appoint</string>
    <string name="btn61">Explore</string>
    <string name="btn62">Add</string>
    <string name="btn63">Income</string>
    <string name="btn64">Profile</string>
    <string name="btn65">What are you looking for?</string>
    <string name="btn66">Appoint</string>
    <string name="btn67">Explore</string>
    <string name="btn68">Add</string>
    <string name="btn69">Income</string>
   <string name="btn70">profile</string>
    <string name="btn71">Financial reports</string>
    <string name="btn72">This Month</string>
    <string name="btn73">Date</string>
    <string name="btn74">Day</string>
    <string name="btn76">No of services</string>
    <string name="btn77">Total</string>
    <string name="btn78">16Aug</string>
    <string name="btn79">Sun</string>
    <string name="btn80">10</string>
    <string name="btn81">20000</string>
    <string name="btn82">15Aug</string>
    <string name="btn83">Sat</string>
    <string name="btn84">20</string>
    <string name="btn85">3000</string>
    <string name="btn86">14Aug</string>
    <string name="btn87">Fri</string>
    <string name="btn88">15</string>
    <string name="btn89">5000</string>
    <string name="btn90">13Aug</string>
    <string name="btn91">Thu</string>
    <string name="btn92">10</string>
    <string name="btn93">26000</string>
    <string name="btn94">Appoint</string>
    <string name="btn95">Explore</string>
    <string name="btn96">Add</string>
    <string name="btn97">Income</string>
    <string name="btn98">Profile</string>
    <string name="btn99">Weekly Total</string>
    <string name="btn100">99000</string>


























</resources>
