<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity13">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="210dp"
        android:layout_height="180dp"
        android:layout_marginStart="88dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="44dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:text="@string/btn46"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="251dp" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:text="@string/btn47"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="299dp" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:text="@string/btn49"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="345dp" />

    <Button
        android:id="@+id/button38"
        android:layout_width="70dp"
        android:layout_height="39dp"
        android:background="#40C4FF"
        android:text="@string/btn50"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="398dp" />

    <Button
        android:id="@+id/button39"
        android:layout_width="302dp"
        android:layout_height="45dp"
        android:background="#40C4FF"
        android:text="@string/btn51"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="459dp" />

    <Button
        android:id="@+id/button40"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:background="#40C4FF"
        android:text="@string/btn52"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="531dp" />

    <Button
        android:id="@+id/button41"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:background="#40C4FF"
        android:text="@string/btn53"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="651dp" />

    <Button
        android:id="@+id/button42"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:background="#40C4FF"
        android:text="@string/btn54"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="651dp" />

    <Button
        android:id="@+id/button43"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:background="#40C4FF"
        android:text="@string/btn55"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="651dp" />

    <Button
        android:id="@+id/button44"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:background="#40C4FF"
        android:text="@string/btn56"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="651dp" />

    <Button
        android:id="@+id/button45"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:background="#40C4FF"
        android:text="@string/btn57"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="651dp" />
</androidx.constraintlayout.widget.ConstraintLayout>