<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity6">

    <Button
        android:id="@+id/button16"
        android:layout_width="340dp"
        android:layout_height="56dp"
        android:layout_marginTop="72dp"
        android:background="#40C4FF"
        android:text="@string/btn45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/btn46"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="156dp" />

    <Button
        android:id="@+id/button18"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:background="#40C4FF"
        android:text="@string/btn47"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="156dp" />

    <Button
        android:id="@+id/button21"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:layout_marginStart="256dp"
        android:text="@string/btn49"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="156dp" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="127dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:text="@string/btn49"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="256dp" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="122dp"
        android:layout_height="51dp"
        android:layout_marginStart="44dp"
        android:text="@string/btn55"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="456dp" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="126dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:text="@string/btn51"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="320dp" />

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="126dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:text="@string/btn53"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="381dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn52"
        android:textColor="#373434"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="333dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn50"
        android:textColor="#232222"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="266dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn54"
        android:textColor="#2C2828"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="404dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn56"
        android:textColor="#292525"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="471dp" />

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#40C4FF"
        android:text="@string/btn57"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="574dp" />

</androidx.constraintlayout.widget.ConstraintLayout>