<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity5">

  <ImageButton
      android:id="@+id/imageButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:layout_editor_absoluteX="115dp"
      tools:layout_editor_absoluteY="101dp"
      tools:srcCompat="@tools:sample/avatars" />

  <EditText
      android:id="@+id/editTextTextPersonName2"
      android:layout_width="289dp"
      android:layout_height="50dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="@string/btn17"
      android:textSize="24sp"
      tools:layout_editor_absoluteX="45dp"
      tools:layout_editor_absoluteY="363dp" />

  <EditText
      android:id="@+id/editTextTextPersonName6"
      android:layout_width="289dp"
      android:layout_height="50dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="@string/btn16"
      android:textSize="24sp"
      tools:layout_editor_absoluteX="45dp"
      tools:layout_editor_absoluteY="313dp" />

  <EditText
      android:id="@+id/editTextTextPersonName3"
      android:layout_width="285dp"
      android:layout_height="46dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="@string/btn19"
      android:textSize="24sp"
      tools:layout_editor_absoluteX="52dp"
      tools:layout_editor_absoluteY="427dp" />

  <EditText
      android:id="@+id/editTextTextPersonName4"
      android:layout_width="285dp"
      android:layout_height="46dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="@string/btn20"
      android:textSize="24sp"
      tools:layout_editor_absoluteX="52dp"
      tools:layout_editor_absoluteY="490dp" />

  <EditText
      android:id="@+id/editTextDate"
      android:layout_width="279dp"
      android:layout_height="46dp"
      android:ems="10"
      android:inputType="@string/btn22"
      tools:layout_editor_absoluteX="52dp"
      tools:layout_editor_absoluteY="592dp" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="204dp"
      android:layout_height="37dp"
      android:text="@string/btn21"
      tools:layout_editor_absoluteX="56dp"
      tools:layout_editor_absoluteY="555dp" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn18"
      tools:layout_editor_absoluteX="184dp"
      tools:layout_editor_absoluteY="377dp" />

  <Button
      android:id="@+id/button14"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#40C4FF"
      android:text="@string/btn23"
      android:textSize="18sp"
      tools:layout_editor_absoluteX="135dp"
      tools:layout_editor_absoluteY="650dp" />

</androidx.constraintlayout.widget.ConstraintLayout>