<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity14">

    <Button
        android:id="@+id/button46"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:text="@string/btn65"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="28dp" />

    <Button
        android:id="@+id/button47"
        android:layout_width="82dp"
        android:layout_height="47dp"
        android:background="#40C4FF"
        android:text="@string/btn66"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/button48"
        android:layout_width="82dp"
        android:layout_height="47dp"
        android:background="#40C4FF"
        android:text="@string/btn67"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/button49"
        android:layout_width="82dp"
        android:layout_height="47dp"
        android:background="#40C4FF"
        android:text="@string/btn68"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/button50"
        android:layout_width="82dp"
        android:layout_height="47dp"
        android:background="#40C4FF"
        android:text="@string/btn69"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/button51"
        android:layout_width="82dp"
        android:layout_height="47dp"
        android:background="#40C4FF"
        android:text="@string/btn70"
        tools:layout_editor_absoluteX="318dp"
        tools:layout_editor_absoluteY="635dp" />
</androidx.constraintlayout.widget.ConstraintLayout>