<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity9">

    <Button
        android:id="@+id/button27"
        android:layout_width="237dp"
        android:layout_height="192dp"
        android:background="#40C4FF"
        android:text="@string/btn64"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="36dp" />

    <Button
        android:id="@+id/button29"
        android:layout_width="237dp"
        android:layout_height="192dp"
        android:background="#40C4FF"
        android:text="@string/btn65"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="249dp" />

    <Button
        android:id="@+id/button30"
        android:layout_width="237dp"
        android:layout_height="192dp"
        android:background="#40C4FF"
        android:text="@string/btn7"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="476dp" />

</androidx.constraintlayout.widget.ConstraintLayout>